2007-11-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Nicer progress texts
	
        * libnautilus-private/nautilus-progress-info.c:
	Hide progress window when last op finishes.

2007-11-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Don't free uninitialized memory.
	
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-progress-info.[ch]:
	Add progress info dialog

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Handle debuting URIs in file copy op
	
        * src/file-manager/fm-directory-view.c:
	Use new nautilus_file_operations_copy for copy.
	Make debuting_uri hash into debuting_files in new
	API. Convert for old calls.

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add run_warning and run_error to simplify the
	code for error dialogs.

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add defines for common button names to make sure
	they are consistent

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Use the right create_dest arg to copy_directory
	
2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Free primary / secondary in run_simple_dialog

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add IS_IO_ERROR macro and use that
	
2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.[ch]:
	Remove printf versions
	rename _set_foo_nocopy to _take_foo

        * libnautilus-private/nautilus-file-operations.c:
	Use new custom printf formating for all strings
	